--- a/TeamA_SelectServer/CMakeLists.txt
+++ b/TeamA_SelectServer/CMakeLists.txt
@@ -3,4 +3,4 @@ project(TeamA_SelectServer C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(TeamA_SelectServer hangman.h SelectServer.c)
+add_executable(TeamA_SelectServer hangman.h SelectServer.c TCPConnectionSetup.h)
